# a-new-uganda

./: ingestion.py  main.py  pyproject.toml
static/: docs.txt
